# myaistocks

./: .gitignore  ARCHITECTURE.md  README.md
stock-ai-backend/: .env.example  pyproject.toml  requirements.txt
stock-ai-backend/app/: __init__.py  ai_service.py  database.py  email_service.py  main.py  mcp_tools.py  models.py  scheduler_service.py
stock-ai-backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_api_endpoints.py  test_database.py  test_email_service.py  test_mcp_tools.py  test_scheduler_service.py
stock-ai-frontend/: index.html
stock-ai-frontend/css/: styles.css
stock-ai-frontend/js/: api.js  app.js  auth.js  chat.js  config.js  dashboard.js  explorer.js  scheduler.js
