[tool.poetry]
name = "stock-ai-backend"
version = "0.1.0"
description = "Stock AI Analyst Backend"
authors = ["Devin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
uvicorn = "^0.40.0"
python-dotenv = "^1.2.1"
openai = "^2.16.0"
yfinance = "^1.1.0"
pandas = "^3.0.0"
numpy = "^2.4.1"
apscheduler = "^3.11.2"
aiosmtplib = "^5.1.0"
python-multipart = "^0.0.22"
pydantic = {extras = ["email"], version = "^2.12.5"}
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
